opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD-2-Clause"

depends: [
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.08.0"}
  "dns" {= version}
  "dns-tsig" {= version}
  "dns-mirage" {= version}
  "randomconv" {>= "0.1.2"}
  "duration" {>= "0.1.2"}
  "x509" {>= "0.15.2"}
  "lwt" {>= "4.2.1"}
  "mirage-random" {>= "2.0.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "tcpip" {>= "7.0.0"}
  "logs"
  "mirage-crypto-ec"
  "mirage-crypto-pk" {>= "0.8.0"}
  "mirage-crypto-rng" {>= "0.8.0"}
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "MirageOS let's encrypt certificate retrieval"
description: """
A function to retrieve a certificate when providing a hostname, TSIG key, server
IP, and an optional key seed. Best used with an letsencrypt unikernel.
"""
