opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD-2-Clause"

depends: [
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.13.0"}
  "dns" {= version}
  "dns-tsig" {= version}
  "dns-mirage" {= version}
  "randomconv" {>= "0.2.0"}
  "duration" {>= "0.1.2"}
  "x509" {>= "1.0.0"}
  "lwt" {>= "4.2.1"}
  "mirage-time" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "tcpip" {>= "8.2.0"}
  "logs"
  "mirage-crypto-ec"
  "mirage-crypto-pk" {>= "1.0.0"}
  "mirage-crypto-rng-mirage" {>= "1.0.0"}
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "MirageOS let's encrypt certificate retrieval"
description: """
A function to retrieve a certificate when providing a hostname, TSIG key, server
IP, and an optional key seed. Best used with an letsencrypt unikernel.
"""
pin-depends: [
  [ "tcpip.8.2.0" "git+https://github.com/mirage/mirage-tcpip.git#519c576a9477ea381f077309f61feab01c4bb76a" ]
]
