opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD2"

depends: [
  "dune" {build & >= "1.2.0"}
  "ocaml" {>= "4.07.0"}
  "dns" {= version}
  "dns-tsig" {= version}
  "dns-client-lwt" {= version}
  "dns-zone" {= version}
  "dns-server" {= version}
  "dns-certify" {= version}
  "rresult"
  "bos"
  "cmdliner" {>= "1.0.0"}
  "fpath"
  "x509" {>= "0.7.0"}
  "nocrypto"
  "hex"
  "ptime"
  "logs"
  "fmt"
  "ipaddr" {>= "3.0.0"}
  "alcotest" {with-test}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "Unix command line utilities using uDNS"
description: """
'oupdate' sends a DNS update frome to a DNS server that sets 'hostname A ip'.
For authentication via TSIG, a hmac secret needs to be provided.

'ocertify' updates DNS with a certificate signing request, and polls a matching
certificate. Best used with an letsencrypt unikernel.
"""
