opam-version: "2.0"
maintainer: "Bikal Gurung <gbikal AT gmail DOT com>"
authors: ["Bikal Gurung <gbikal AT gmail DOT com>"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="3.2"}
  "cstruct" {>= "6.0.0"}
  "base-domains"
  "ipaddr" {>= "5.3.0"}
  "dns-client" {>= version}
  "mirage-clock" {>= "3.0.0"}
  "mtime" {>= "1.2.0"}
  "mirage-crypto-rng-eio" {>= "0.10.7"}
  "domain-name" {>= "0.4.0"}
  "mtime" {>= "1.2.0"}
  "fmt" {>= "0.8.8"}
  "eio_main" {>= "0.5"}
]
synopsis: "DNS client for eio"
description: """
A resolver implementation using uDNS and eio.
"""
