opam-version: "2.0"
maintainer: "Bikal Gurung <gbikal AT gmail DOT com>"
authors: ["Bikal Gurung <gbikal AT gmail DOT com>"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="3.2"}
  "cstruct" {>= "6.0.0"}
  "duration" {>= "0.2.1"}
  "base-domains"
  "ipaddr" {>= "5.3.0"}
  "dns-client" {>= version}
  "dns-client.resolvconf" {>= version}
  "happy-eyeballs" {>= "0.3.0"}
  "mtime" {>= "1.2.0"}
  "mirage-crypto-rng-eio" {>= "0.10.7"}
  "domain-name" {>= "0.4.0"}
  "fmt" {>= "0.8.8"}
  "logs" {>= "0.7.0"}
  "eio" {>= "0.7.0"}
  "tls-eio" {>= "0.15.5"}
  "ca-certs" {>= "0.2.3"}
]
synopsis: "DNS client for eio"
description: """
A resolver implementation using uDNS and eio.
"""
