opam-version: "2.0"
maintainer:   "team AT robur dot io"
authors:      ["Joe Hill"]
homepage:     "https://github.com/roburio/udns"
bug-reports:  "https://github.com/roburio/udns/issues"
dev-repo:     "git+https://github.com/roburio/udns.git"
license:      "BSD2"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {build & >="1.5.1"}
  "ocaml" { >= "4.07.0"}
  "lwt"
  "dns" {= version}
  "dns-client" {= version}
]
synopsis: "DNS client library, using lwt for IO"
description: """
A DNS client library providing resolve that uses lwt for IO.
"""