opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Joe Hill"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="2.0.0"}
  "ocaml" {>= "4.08.0"}
  "dns-client" {= version}
  "dns" {= version}
  "ipaddr" {>= "5.3.0"}
  "lwt" {>= "4.2.1"}
  "mtime" {>= "1.2.0"}
  "mirage-crypto-rng-lwt" {>= "0.11.0"}
  "happy-eyeballs-lwt" {>= "0.6.0"}
  "tls-lwt" {>= "0.16.0"}
  "ca-certs"
]
synopsis: "DNS client API using lwt"
description: """
A client implementation using uDNS and lwt for side effects.
"""
pin-depends: [
  [ "happy-eyeballs-lwt.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#a0ae36741eebfc425faf95c7fb4f7e03463e213c" ]
  [ "happy-eyeballs.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#a0ae36741eebfc425faf95c7fb4f7e03463e213c" ]
]
