opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="2.0.0"}
  "ocaml" {>= "4.08.0"}
  "dns-client" {= version}
  "domain-name" {>= "0.4.0"}
  "ipaddr" {>= "5.3.0"}
  "miou" {>= "0.1.0"}
  "happy-eyeballs" {>= "0.6.0"}
  "happy-eyeballs-miou-unix"
]
synopsis: "DNS client API for Miou"
description: """
A client implementation using uDNS using Miou.
"""

pin-depends: [
  [ "miou.dev" "git+https://git.robur.coop/robur/miou.git#ed5087b832797616df073bd8ec9baed2ec4e474c" ]
  [ "happy-eyeballs-miou-unix.0.6.0" "git+https://github.com/dinosaure/happy-eyeballs.git#4ff9ff889500b764adcefaf719852298c8d51a40" ]
  [ "tls-miou-unix.0.17.4" "git+https://github.com/dinosaure/ocaml-tls.git#6b635d130b83bb45007e374d828f877332ab2b2e" ]
]
