opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="2.0.0"}
  "ocaml" {>= "4.08.0"}
  "dns-client" {= version}
  "domain-name" {>= "0.4.0"}
  "ipaddr" {>= "5.3.0"}
  "miou" {>= "0.1.0"}
  "tls-miou-unix"
  "happy-eyeballs" {>= "0.6.0"}
  "happy-eyeballs-miou-unix"
]
synopsis: "DNS client API for Miou"
description: """
A client implementation using uDNS using Miou.
"""

pin-depends: [
  [ "happy-eyeballs-miou-unix.1.1.0" "git+https://github.com/robur-coop/happy-eyeballs.git#2a2f276b547d9ac34c0ce9ca40a19b67c7db726f" ]
]
