opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="2.8.0"}
  "ocaml" {>= "5.0.0"}
  "dns-client" {= version}
  "domain-name" {>= "0.4.0"}
  "ipaddr" {>= "5.3.0"}
  "miou" {>= "0.1.0"}
  "tls-miou-unix" {>= "2.0.0"}
  "happy-eyeballs" {>= "2.0.0"}
  "happy-eyeballs-miou-unix" {>= "2.0.0"}
]
synopsis: "DNS client API for Miou"
description: """
A client implementation using uDNS using Miou.
"""
x-maintenance-intent: [ "(latest)" ]
