opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Joe Hill"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="2.0.0"}
  "ocaml" {>= "4.08.0"}
  "dns-client" {= version}
  "domain-name" {>= "0.4.0"}
  "ipaddr" {>= "5.3.0"}
  "lwt" {>= "4.2.1"}
  "tcpip" {>= "7.0.0"}
  "mirage-random" {>= "2.0.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "happy-eyeballs-mirage" {>= "1.1.0"}
  "happy-eyeballs" {>= "1.0.0"}
  "tls-mirage" {>= "0.16.0"}
  "x509" {>= "1.0.0"}
  "ca-certs-nss" {>= "3.101-1"}
]
synopsis: "DNS client API for MirageOS"
description: """
A client implementation using uDNS using MirageOS.
"""

pin-depends: [
  [ "tls.dev" "git+https://github.com/dinosaure/ocaml-tls.git#7495fa5451047bf2137f703f9706adbeba529c03" ]
  [ "tls-mirage.dev" "git+https://github.com/dinosaure/ocaml-tls.git#7495fa5451047bf2137f703f9706adbeba529c03" ]
  [ "tcpip.dev" "git+https://github.com/mirage/mirage-tcpip.git#1bc27cd57dc0d79c70d2312bb9396c88df38aef0" ]
]
