opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Joe Hill"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="2.0.0"}
  "ocaml" {>= "4.08.0"}
  "dns-client" {= version}
  "domain-name" {>= "0.4.0"}
  "ipaddr" {>= "5.3.0"}
  "lwt" {>= "4.2.1"}
  "tcpip" {>= "8.2.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "happy-eyeballs-mirage" {>= "1.1.0"}
  "happy-eyeballs" {>= "1.0.0"}
  "tls-mirage" {>= "1.0.0"}
  "x509" {>= "1.0.0"}
  "ca-certs-nss" {>= "3.101-1"}
  "mirage-crypto-rng-mirage" {>= "1.0.0"}
]
synopsis: "DNS client API for MirageOS"
description: """
A client implementation using uDNS using MirageOS.
"""
pin-depends: [
  [ "tcpip.8.2.0" "git+https://github.com/mirage/mirage-tcpip.git#519c576a9477ea381f077309f61feab01c4bb76a" ]
]
