opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Joe Hill"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="2.0.0"}
  "ocaml" {>= "4.13.0"}
  "dns-client" {= version}
  "domain-name" {>= "0.4.0"}
  "ipaddr" {>= "5.3.0"}
  "lwt" {>= "4.2.1"}
  "tcpip" {>= "8.2.0"}
  "mirage-sleep" {>= "4.0.0"}
  "mirage-mtime" {>= "4.0.0"}
  "happy-eyeballs-mirage" {>= "2.0.0"}
  "happy-eyeballs" {>= "2.0.0"}
  "tls-mirage" {>= "2.0.0"}
  "x509" {>= "1.0.0"}
  "ca-certs-nss" {>= "3.108-1"}
  "mirage-crypto-rng" {>= "1.0.0"}
]
synopsis: "DNS client API for MirageOS"
description: """
A client implementation using uDNS using MirageOS.
"""
x-maintenance-intent: [ "(latest)" ]
