opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Joe Hill"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="1.2.0"}
  "ocaml" {>= "4.08.0"}
  "cstruct" {>= "6.0.0"}
  "fmt" {>= "0.8.8"}
  "logs" {>= "0.6.3"}
  "dns" {= version}
  "randomconv" {>= "0.1.2"}
  "domain-name" {>= "0.4.0"}
  "ipaddr" {>= "4.0.0"}
  "lwt" {>= "4.2.1"}
  "tcpip" {>= "7.0.0"}
  "mirage-random" {>= "2.0.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "mtime" {>= "1.2.0"}
  "mirage-crypto-rng" {>= "0.8.0"}
  "happy-eyeballs" {>= "0.1.0"}
  "alcotest" {with-test}
  "tls" {>= "0.15.0"}
  "tls-mirage" {>= "0.15.0"}
  "ca-certs"
  "ca-certs-nss"
]
synopsis: "DNS resolver API"
description: """
A resolver implementation using uDNS.
"""
