opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Joe Hill"]
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
license: "BSD-2-Clause"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {>="1.2.0"}
  "ocaml" {>= "4.07.0"}
  "cstruct" {>= "4.0.0"}
  "fmt" {>= "0.8.8"}
  "logs" {>= "0.6.3"}
  "dns" {= version}
  "rresult" {>= "0.6.0"}
  "randomconv" {>= "0.1.2"}
  "domain-name" {>= "0.3.0"}
  "ipaddr" {>= "4.0.0"}
  "lwt" {>= "4.2.1"}
  "mirage-stack" {>= "2.0.0"}
  "mirage-random" {>= "2.0.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "mtime" {>= "1.2.0"}
  "mirage-crypto-rng"
  "alcotest" {with-test}
]
synopsis: "Pure DNS resolver API"
description: """
A pure resolver implementation using uDNS.
"""
