opam-version: "1.2"
maintainer:   "anil@recoil.org"
homepage:     "https://github.com/mirage/ocaml-dns"
dev-repo:     "https://github.com/mirage/ocaml-dns.git"
bug-reports:  "https://github.com/mirage/ocaml-dns/issues"
doc:          "https://mirage.github.io/ocaml-dns/"
tags: [ "org:mirage" "org:xapi-project" ]
authors: [
  "Anil Madhavapeddy" "Tim Deegan" "Richard Mortier" "Haris Rotsos"
  "David Sheets" "Thomas Gazagnaire" "Luke Dunstan" "David Scott"
]
license: "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "mirage-profile" {>="0.8.0"}
  "lwt" {>="3.0.0"}
  "dns"
]
available: [ocaml-version >= "4.03.0"]
