opam-version: "2.0"
maintainer: "team AT robur dot io"
homepage: "https://github.com/roburio/udns"
bug-reports: "https://github.com/roburio/udns/issues"
dev-repo: "git+https://github.com/roburio/udns.git"
license: "BSD2"
authors: [ "Hannes Mehnert" ]
tags: "org:mirage"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"  { build & >= "1.5.1"}
  "ocaml" {>= "4.07.0" }
  "domain-name" {>= "0.1.2"}
  "ipaddr" {>= "3.0.0"}
  "mirage-stack-lwt"
  "dns-client" {= version}
]
synopsis: "DNS client library for MirageOS"
description: """
A DNS client library for MirageOS. Based on uDNS.
"""