opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD2"

depends: [
  "dune" {build & >= "1.2.0"}
  "ocaml" {>= "4.07.0"}
  "dns" {= version}
  "dns-mirage" {= version}
  "dns-server" {= version}
  "dns-resolver" {= version}
  "mirage-time-lwt"
  "mirage-clock-lwt"
  "mirage-random"
  "lwt"
  "randomconv"
  "duration"
  "mirage-stack-lwt"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "DNS caching resolver for MirageOS"
description: """
A caching DNS resolver for MirageOS.
"""
