opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD2"

depends: [
  "dune" {build & >= "1.2.0"}
  "ocaml" {>= "4.07.0"}
  "dns" {= version}
  "dns-mirage" {= version}
  "dns-server" {= version}
  "mirage-time-lwt"
  "mirage-clock-lwt" {>= "2.0.0"}
  "lwt"
  "randomconv"
  "duration"
  "mirage-stack-lwt"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "Primary and secondary DNS server for MirageOS using uDNS"
description: """
Convenience functions for registering TCP and UDP listeners acting as primary
or seconday DNS server.
"""
