opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD2"

depends: [
  "dune" {>= "1.2.0"}
  "ocaml" {>= "4.07.0"}
  "dns" {= version}
  "dns-mirage" {= version}
  "randomconv" {>= "0.1.2"}
  "duration" {>= "0.1.2"}
  "lwt" {>= "4.2.1"}
  "mirage-time-lwt" {>= "1.3.0"}
  "mirage-clock-lwt" {>= "2.0.0"}
  "mirage-stack-lwt" {>= "1.4.0"}
  "nocrypto" {with-test}
  "alcotest" {with-test}
  "dns-tsig" {with-test}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "DNS server, primary and secondary"
description: """
Primary and secondary DNS server implemented in value-passing style. Needs an
effectful layer to be useful.
"""
