opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD-2-Clause"

depends: [
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.13.0"}
  "cstruct" {>= "6.0.0"}
  "dns" {= version}
  "dns-client-mirage" {= version}
  "dns-mirage" {= version}
  "dns-resolver" {= version}
  "dns-tsig" {= version}
  "dns-server" {= version}
  "duration" {>= "0.1.2"}
  "randomconv" {>= "0.2.0"}
  "lwt" {>= "4.2.1"}
  "mirage-ptime" {>= "4.0.0"}
  "tcpip" {>= "8.2.0"}
  "metrics"
  "mirage-crypto-rng" {>= "1.0.0"}
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "DNS stub resolver"
description: """
Forwarding and recursive resolvers as value-passing functions. To be used with
an effectful layer.
"""
x-maintenance-intent: [ "(latest)" ]
