opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD-2-Clause"

depends: [
  "dune" {>= "1.2.0"}
  "ocaml" {>= "4.07.0"}
  "cstruct" {>= "6.0.0"}
  "dns" {= version}
  "mirage-crypto"
  "base64" {>= "3.0.0"}
  "alcotest" {with-test}
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "TSIG support for DNS"
description: """
TSIG is used to authenticate nsupdate frames using a HMAC.
"""
