opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/roburio/udns"
doc: "https://roburio.github.io/udns/doc"
dev-repo: "git+https://github.com/roburio/udns.git"
bug-reports: "https://github.com/roburio/udns/issues"
license: "BSD2"

depends: [
  "dune" {build & >= "1.2.0"}
  "ocaml" {>= "4.07.0"}
  "rresult" "astring" "fmt" "logs" "ptime"
  "domain-name" {>= "0.1.1"}
  "gmap" {>= "0.3.0"}
  "cstruct" {>= "3.2.0"}
  "ipaddr" {>= "3.0.0"}
  "ppx_expect"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An opinionated Domain Name System (DNS) library"
description: """
µDNS supports most of the domain name system used in the wild.  It adheres to
strict conventions.  Failing early and hard.  It is mostly implemented in the
pure fragment of OCaml (no mutation, isolated IO, no exceptions).

Legacy resource record types are not dealt with, and there is no plan to support
`ISDN`, `MAILA`, `MAILB`, `WKS`, `MB`, `NULL`, `HINFO`, ... .  `AXFR` is only
handled via TCP connections.  The only resource class supported is `IN` (the
Internet).  In a similar vein, wildcard records are _not_ supported, and it is
unlikely they'll ever be in this library.  Truncated hmac in `TSIG` are not
supported (always the full length of the hash algorithm is used).

Please read [the blog article](https://hannes.nqsb.io/Posts/DNS) for a more
detailed overview.
"""
