opam-version: "2.0"
maintainer: "team AT robur dot coop"
authors: ["Hannes Mehnert <hannes@mehnert.org>" "Reynir Björnsson <reynir@reynir.dk>"]
homepage: "https://github.com/mirage/ocaml-dns"
doc: "https://mirage.github.io/ocaml-dns/"
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
license: "BSD-2-Clause"

depends: [
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.13.0"}
  "dns" {= version}
  "alcotest" {with-test}
  "mirage-crypto"
  "mirage-crypto-pk"
  "mirage-crypto-ec"
  "domain-name" {>= "0.4.0"}
  "base64" {with-test & >= "3.0.0"}
  "logs" {>= "0.7.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "DNSSec support for OCaml-DNS"
description: """
DNSSec (DNS security extensions) for OCaml-DNS, including
signing and verifying of RRSIG records.
"""
