opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Tim Deegan"
  "Richard Mortier"
  "Haris Rotsos"
  "David Sheets"
  "Thomas Gazagnaire"
  "Luke Dunstan"
]
license: "ISC"
homepage: "https://github.com/mirage/ocaml-dns"
bug-reports: "https://github.com/mirage/ocaml-dns/issues"
synopsis: "DNS implementation for the MirageOS unikernel framework"
description: """
This is an implementation of a DNS server and client resolver
for the [MirageOS unikernel framework](https://mirage.io).
"""
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "dns-lwt"
  "duration"
  "mirage-stack-lwt" {>= "1.3.0"}
  "mirage-kv-lwt" {>= "2.0.0"}
  "mirage-time-lwt"
  "mirage-profile" {>= "0.8.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/ocaml-dns.git"
