opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Joe Hill"]
homepage: "https://github.com/roburio/udns"
bug-reports: "https://github.com/roburio/udns/issues"
dev-repo: "git+https://github.com/roburio/udns.git"
license: "BSD2"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune"  {build & >="1.5.1"}
  "ocaml" {>= "4.07.0"}
  "domain-name" {>= "0.1.2"}
  "fmt" {>= "0.8.4"}
  "ipaddr" {>= "3.0.0"}
  "udns"
  "udns-client"
  "fmt" {>= "0.8.4"}
  "rresult" {>= "0.6.0"}
]
synopsis: "Unix DNS resolver, providing resolve"
description: """
An effectful layer for udns-client, that uses the Unix module from OCaml stdlib.
"""
